--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bsb -make-world -w",
+    "start": "bsb -clean-world -make-world -w 2>&1 | berror --path-to-refmttype refmttype",
     "build": "webpack -w",
     "analyze": "ANALYZE_BUNDLE=1 webpack",
     "clean": "bsb -clean-world"
