Use ES6 modules and rollup for a 3-4x reduction in pre-{min/gzip} filesize

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -5,6 +5,7 @@
 {
   "name" : "shmup.re",
   "bs-dependencies": ["bs-webapi"],
+  "package-specs": ["es6"],
   "sources": [
     {
       "dir": "src",
