--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "bs-platform": "1.6.0",
     "webpack": "2.2.0",
-    "webpack-bundle-analyzer": "2.8.1"
+    "webpack-bundle-analyzer": "2.8.1",
+    "webpack-rollup-loader": "0.1.3"
   }
 }
