--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "bsb -clean-world -make-world -w 2>&1 | berror --path-to-refmttype refmttype",
     "build": "webpack -w",
     "analyze": "ANALYZE_BUNDLE=1 webpack",
-    "clean": "bsb -clean-world"
+    "clean": "bsb -clean-world",
+    "prepush": "NODE_ENV=production webpack -p && git add dist && git ci -m 'Update dist/main.js'"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "bs-platform": "1.6.0",
+    "husky": "0.13.3",
     "webpack": "2.2.0",
     "webpack-bundle-analyzer": "2.8.1",
     "webpack-rollup-loader": "0.1.3"
